[gd_scene load_steps=10 format=2]

[ext_resource path="res://Nodes/UI/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/titlescreen-placeholder.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/game-title.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/new-game-button.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/new-game-hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/option-button.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/options-hover.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/exit-button.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/exit-hover.png" type="Texture" id=9]

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 220.0
margin_top = 20.0
margin_right = 420.0
margin_bottom = 340.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="GameTitle" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 200.0
margin_bottom = 204.0
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 84.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 7 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 200.0
margin_bottom = 148.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 9 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
